<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/swipeResultContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        tools:visibility="gone">

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:contentDescription="@string/refuelFastAdapterItem_deleteBtnContentDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fastAdapterItem_refuel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/lightGray"
        android:padding="8dp"
        tools:visibility="visible">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fuelType"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/refuelFastAdapterItem_fuelTypeExample"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/refuelFastAdapterItem_dateExample"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/totalPrice"
            app:layout_constraintStart_toEndOf="@id/fuelType"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/totalPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/refuelFastAdapterItem_totalPriceExample"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/date" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refuelFastAdapterItem_quantityExample"
            app:layout_constraintEnd_toStartOf="@id/unitPrice"
            app:layout_constraintStart_toEndOf="@id/fuelType"
            app:layout_constraintTop_toBottomOf="@id/date" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/unitPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/refuelFastAdapterItem_unitPriceExample"
            app:layout_constraintBaseline_toBaselineOf="@id/quantity"
            app:layout_constraintStart_toEndOf="@id/quantity" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/kmSinceLastRefueling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refuelFastAdapterItem_kmSinceLastRefuelingExample"
            app:layout_constraintBaseline_toBaselineOf="@id/unitPrice"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/refuelFastAdapterItem_descriptionExample"
            app:layout_constraintStart_toEndOf="@id/fuelType"
            app:layout_constraintTop_toBottomOf="@id/quantity" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>