<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="pl.kontroler.carspendsmoney.ui.newRefuel.NewRefuelViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.newRefuel.NewRefuelFragment">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dateText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{viewmodel.date.toString()}"
                app:layout_constraintBaseline_toBaselineOf="@id/dateButton"
                app:layout_constraintBottom_toTopOf="@id/quantityInputLayout"
                app:layout_constraintEnd_toStartOf="@id/dateButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newRefuel_date"
                app:layout_constraintBottom_toTopOf="@id/quantityInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/dateText"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/quantityInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/newRefuel_hintQuantity"
                app:layout_constraintBottom_toTopOf="@id/fuelType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateButton">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/quantityInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@={viewmodel.quantity}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/fuelType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:fuelTypesList="@{viewmodel.fuelTypesList}"
                app:layout_constraintBottom_toTopOf="@id/unitPriceInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/quantityInputLayout"
                app:selectedFuelType="@={viewmodel.selectedFuelType}" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/unitPriceInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/newRefuel_hintUnitPrice"
                app:layout_constraintBottom_toTopOf="@id/currency"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fuelType">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/unitPriceInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@={viewmodel.unitPrice}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/currency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:currenciesList="@{viewmodel.currenciesList}"
                app:layout_constraintBottom_toTopOf="@id/counterInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/unitPriceInputLayout"
                app:selectedCurrency="@={viewmodel.selectedCurrency}" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/counterInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/newRefuel_hintCounter"
                app:layout_constraintBottom_toTopOf="@id/descriptionInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/currency">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/counterInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@={viewmodel.counter}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionInputLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:hint="@string/newRefuel_hintDescription"
                app:layout_constraintBottom_toTopOf="@id/totalPrice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/counterInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={viewmodel.description}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/totalPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@{viewmodel.getTotalPriceString(viewmodel.quantity, viewmodel.unitPrice, viewmodel.selectedCurrency)}"
                app:layout_constraintBottom_toTopOf="@id/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionInputLayout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/newRefuel_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/totalPrice" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> viewmodel.write()}"
                android:text="@string/newRefuel_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel"
                app:layout_constraintTop_toBottomOf="@id/totalPrice" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>